--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,20 +2,26 @@ project:
   type: website
 
 website:
+  # title: "Manuela Lozano"
   navbar:
     left:
       - href: index.qmd
         text: Home
       - href: about.qmd
         text: About
+      - href: projects.qmd
+        text: Projects
+      - href: cv.qmd
+        text: Resume
+      - href: contact.qmd
+        text: Contact
+    right:
+      - icon: github
+        href: "https://github.com/malozano1-ux"
 
 format:
   html:
-    theme:
-      - cosmo
-      - brand
+    theme: cosmo
     css: styles.css
-    toc: true
-
-
+    toc: false
 
